ci(Docker): removed comments in the dockerfile